Updated JwtAuthenticationFilter class